# harper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  demo.md  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
harper-cli/: Cargo.toml
harper-cli/src/: main.rs
harper-comments/: Cargo.toml
harper-comments/src/: comment_parser.rs  lib.rs  masker.rs
harper-comments/src/comment_parsers/: go.rs  javadoc.rs  jsdoc.rs  unit.rs
harper-comments/tests/: language_support.rs
harper-comments/tests/language_support_sources/: basic_kotlin.kt  common.mill  ignore_comments.c  ignore_comments.rs  ignore_shebang_1.sh  ignore_shebang_2.sh  ignore_shebang_3.sh  ignore_shebang_4.sh  issue_96.lua  issue_96.rb  javadoc_clean_simple.java  javadoc_complex.java  laravel_app.php
harper-core/: Cargo.toml  README.md  affixes.json  default_config.json  dictionary.dict  proper_noun_rules.json
harper-core/benches/: essay.md  parse_demo.rs
harper-core/src/: char_ext.rs  char_string.rs  currency.rs  document.rs  edit_distance.rs  fat_token.rs  language_detection.rs  lib.rs  number.rs  punctuation.rs  render_markdown.rs  span.rs  sync.rs  title_case.rs  token.rs  token_kind.rs  token_string_ext.rs  word_metadata.rs
harper-core/src/ignored_lints/: lint_context.rs  mod.rs
harper-core/src/lexing/: email_address.rs  hostname.rs  mod.rs  url.rs
harper-core/src/linting/: adjective_of_a.rs  an_a.rs  ask_no_preposition.rs  avoid_curses.rs  back_in_the_day.rs  boring_words.rs  capitalize_personal_pronouns.rs  chock_full.rs  closed_compounds.rs  comma_fixes.rs  compound_words.rs  confident.rs  correct_number_suffix.rs  currency_placement.rs  dashes.rs  day_and_age.rs  despite_of.rs  dot_initialisms.rs  ellipsis_length.rs  else_possessive.rs  expand_time_shorthands.rs  first_aid_kit.rs  for_noun.rs  hedging.rs  hereby.rs  how_to.rs  hyphenate_number_day.rs  inflected_verb_after_to.rs  it_is.rs  it_would_be.rs  its_contraction.rs  left_right_hand.rs  likewise.rs  linking_verbs.rs  lint.rs  lint_group.rs  lint_kind.rs  long_sentences.rs  map_phrase_linter.rs  matcher.rs  (+47 more)
harper-core/src/linting/compound_nouns/: general_compound_nouns.rs  implied_action_compound_nouns.rs  implied_instantiated_compound_nouns.rs  implied_ownership_compound_nouns.rs  mod.rs
harper-core/src/linting/hop_hope/: mod.rs  to_hop.rs  to_hope.rs
harper-core/src/linting/lets_confusion/: let_us_redundancy.rs  mod.rs  no_contraction_with_verb.rs
harper-core/src/linting/phrase_set_corrections/: mod.rs  tests.rs
harper-core/src/linting/pronoun_contraction/: avoid_contraction.rs  mod.rs  should_contract.rs
harper-core/src/linting/weir_rules/: AtLestToLeast.weir  FondOn.weir  FormativeYears.weir
harper-core/src/mask/: mod.rs
harper-core/src/parsers/: collapse_identifiers.rs  isolate_english.rs  markdown.rs  mask.rs  mod.rs  plain_english.rs
harper-core/src/patterns/: all.rs  any_capitalization.rs  any_pattern.rs  consumes_remaining_pattern.rs  either_pattern.rs  exact_phrase.rs  implies_quantity.rs  indefinite_article.rs  inflection_of_be.rs  invert.rs  is_not_title_case.rs  mod.rs  naive_pattern_group.rs  nominal_phrase.rs  noun_phrase.rs  pattern_map.rs  repeating_pattern.rs  sequence_pattern.rs  similar_to_phrase.rs  singular_subject.rs  split_compound_word.rs  token_kind_pattern_group.rs  whitespace_pattern.rs  within_edit_distance.rs  word.rs  word_pattern_group.rs  word_set.rs
harper-core/src/spell/: dictionary.rs  fst_dictionary.rs  full_dictionary.rs  merged_dictionary.rs  mod.rs  mutable_dictionary.rs  word_id.rs  word_map.rs
harper-core/src/spell/hunspell/: attribute_list.rs  mod.rs  word_list.rs
harper-core/src/spell/rune/: affix_replacement.rs  attribute_list.rs  error.rs  expansion.rs  matcher.rs  mod.rs  word_list.rs
harper-core/tests/: linters.rs  pos_tags.rs  run_tests.rs  snapshot.rs
harper-core/tests/test_sources/: amazon_hostname.md  hex_basic_clean.md  hex_basic_dirty.md  issue_109_ext.md  issue_118.md  issue_159.md  issue_195.md  issue_358.md  lots_of_latin.md  lukas_homework.md  misc_closed_compound_clean.md  obsidian_links.md  pr_452.md  pr_504.md  proper_noun_capitalization.md  yogurt_british_clean.md
harper-core/tests/text/: Alice's Adventures in Wonderland.md  Computer science.md  Difficult sentences.md  Part-of-speech tagging.md  Spell.md  The Constitution of the United States.md  The Great Gatsby.md  this and that.md
harper-core/tests/text/linters/: Alice's Adventures in Wonderland.snap.yml  Computer science.snap.yml  Difficult sentences.snap.yml  Part-of-speech tagging.snap.yml  Spell.snap.yml  The Constitution of the United States.snap.yml  The Great Gatsby.snap.yml  this and that.snap.yml
harper-core/tests/text/tagged/: Alice's Adventures in Wonderland.md  Computer science.md  Difficult sentences.md  Part-of-speech tagging.md  Spell.md  The Constitution of the United States.md  The Great Gatsby.md  this and that.md
harper-html/: Cargo.toml
harper-literate-haskell/: Cargo.toml
harper-literate-haskell/src/: lib.rs  masker.rs
harper-literate-haskell/tests/: run_tests.rs
harper-literate-haskell/tests/test_sources/: bird_format.lhs  latex_format.lhs  mixed_format.lhs
harper-ls/: Cargo.toml  README.md
harper-ls/src/: backend.rs  config.rs  diagnostics.rs  dictionary_io.rs  document_state.rs  git_commit_parser.rs  ignored_lints_io.rs  io_utils.rs  main.rs  pos_conv.rs
harper-stats/: Cargo.toml  README.md
harper-stats/src/: lib.rs  record.rs  summary.rs
harper-tree-sitter/: Cargo.toml
harper-typst/: Cargo.toml
harper-typst/src/: lib.rs  offset_cursor.rs  typst_translator.rs
harper-typst/tests/: run_tests.rs  tests.rs
harper-typst/tests/test_sources/: complex_document.typ  complex_document_with_spelling_mistakes.typ  complex_typst.typ  function_with_ignorable_args.typ  issue_399.typ  simplified_document.typ  typst_spelling_mistakes.typ
harper-wasm/: Cargo.toml
harper-wasm/src/: lib.rs
(+16 files in other folders)
