[package]
name = "harper-cli"
version = "0.1.0"
edition = "2021"
private = true
publish = false
repository = "https://github.com/automattic/harper"

[dependencies]
anyhow = "1.0.95"
ariadne = "0.4.1"
clap = { version = "4.5.27", features = ["derive"] }
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.16.0" }
harper-core = { path = "../harper-core", version = "0.16.0" }
harper-comments = { path = "../harper-comments", version = "0.16.0" }
harper-typst = { path = "../harper-typst", version = "0.16.0" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.137"

[features]
default = []
