[package]
name = "harper-cli"
version = "0.1.0"
edition = "2021"
private = true
publish = false
repository = "https://github.com/automattic/harper"

[dependencies]
anyhow = "1.0.96"
ariadne = "0.4.1"
clap = { version = "4.5.31", features = ["derive"] }
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.23.0" }
harper-core = { path = "../harper-core", version = "0.23.0" }
harper-comments = { path = "../harper-comments", version = "0.23.0" }
harper-typst = { path = "../harper-typst", version = "0.23.0" }
hashbrown = "0.15.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[features]
default = []
