[package]
name = "harper-comments"
version = "0.31.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.31.0" }
harper-html = { path = "../harper-html", version = "0.31.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.31.0" }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.3"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-go = "0.20.0"
tree-sitter-c = "0.20.7"
tree-sitter-cpp = "0.20.5"
tree-sitter-cmake = "=0.4.1"
tree-sitter-ruby = "0.20.1"
tree-sitter-swift = "=0.4.0"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-toml = "0.20.0"
tree-sitter-lua = "0.0.19"
tree-sitter-bash = "0.20.0"
tree-sitter-java = "0.20.0"
tree-sitter-nix = "0.0.1"
itertools = "0.14.0"
tree-sitter-haskell = "0.15.0"
tree-sitter-php = "=0.22.2"
tree-sitter-dart = "0.0.4"
tree-sitter-scala = "0.20.0"

[dev-dependencies]
paste = "1.0.15"
