[package]
name = "harper-core"
version = "0.31.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
blanket = "0.4.0"
fst = "0.4.7"
hashbrown = { version = "0.15.2", features = ["serde"] }
is-macro = "0.3.6"
itertools = "0.14.0"
lazy_static = "1.5.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
paste = "1.0.14"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallvec = { version = "1.15.0", features = ["serde"] }
thiserror = "2.0.12"
unicode-blocks = "0.1.9"
unicode-script = "0.5.7"
unicode-width = "0.2.0"
levenshtein_automata = { version = "0.2.1", features = ["fst_automaton"] }
cached = "0.55.1"
lru = "0.14.0"
foldhash = "0.1.5"
strum_macros = "0.27.1"
strum = "0.27.1"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
once_cell = "1.21.3"

[[bench]]
name = "parse_demo"
harness = false

[features]
default = []
concurrent = []
