[package]
name = "harper-ls"
version = "0.17.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.17.0" }
harper-core = { path = "../harper-core", version = "0.17.0", features = ["concurrent"] }
harper-comments = { path = "../harper-comments", version = "0.17.0" }
harper-typst = { path = "../harper-typst", version = "0.17.0" }
harper-html = { path = "../harper-html", version = "0.17.0" }
tower-lsp = "0.20.0"
tokio = { version = "1.43.0", features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }
clap = { version = "4.5.27", features = ["derive"] }
once_cell = "1.20.2"
dirs = "6.0.0"
anyhow = "1.0.95"
serde_json = "1.0.137"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
resolve-path = "0.1.0"
open = "5.3.0"
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }

[features]
default = []
