[package]
name = "harper-ls"
version = "0.31.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-stats = { path = "../harper-stats", version = "0.31.0" }
harper-literate-haskell = { path = "../harper-literate-haskell", version = "0.31.0" }
harper-core = { path = "../harper-core", version = "0.31.0", features = ["concurrent"] }
harper-comments = { path = "../harper-comments", version = "0.31.0" }
harper-typst = { path = "../harper-typst", version = "0.31.0" }
harper-html = { path = "../harper-html", version = "0.31.0" }
tower-lsp = "0.20.0"
tokio = { version = "1.44.2", features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }
clap = { version = "4.5.37", features = ["derive"] }
once_cell = "1.21.3"
dirs = "6.0.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
resolve-path = "0.1.0"
open = "5.3.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.9.0", features = ["serde"] }

[features]
default = []
