[package]
name = "harper-stats"
version = "0.28.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
harper-core = { path = "../harper-core", version = "0.28.0", features = ["concurrent"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
serde_json = "1.0.140"
chrono = "0.4.40"

[features]
default = []
js = ["uuid/js"]
