[package]
name = "harper-stats"
version = "0.31.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
harper-core = { path = "../harper-core", version = "0.31.0", features = ["concurrent"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde_json = "1.0.140"
chrono = "0.4.40"

[features]
default = []
js = ["uuid/js"]
