[package]
name = "harper-typst"
version = "0.17.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.17.0" }
typst-syntax = { version = "0.12.0" }
ordered-float = { version = "4.6.0", features = ["serde"] }
itertools = "0.14.0"
paste = "1.0.14"
