[package]
name = "harper-wasm"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/automattic/harper"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.97"
harper-core = { path = "../harper-core", version = "0.31.0", features = ["concurrent"] }
once_cell = "1.21.3"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
harper-stats = { path = "../harper-stats", version = "0.31.0", features = ["js"] }
